# apelid

./: .gitignore  README.md  encode.sh  pyproject.toml  requirements.txt  run.sh  test_warn.py  tsne.sh  tune.sh
cli/cic2018/: README.md
configs/: cic2018.py
data/: KDD+_final_test_cat_map.csv  cic.txt  cic_summary.txt  dataset_summary.txt  final_test.csv  majority_test_compressed_raw.csv  minority_classes_raw.csv  minority_test_raw.csv  nslkdd_test_random_sample_clean_merged.csv
encoders/: cic_categorical_encoder.pkl  cic_label_encoder.pkl  cic_numerical_encoder.pkl  cic_ordinal_encoder.pkl
encoders/cic2018/: categorical_encoder.pkl  label_encoder.pkl  label_encoder_fixed.pkl  numerical_minmax_encoder.pkl  numerical_quantile_normal_encoder.pkl  numerical_quantile_uniform_encoder.pkl  numerical_standard_encoder.pkl  ordinal_encoder.pkl  pca_major.pkl
encoders/nslkdd/: categorical_encoder.pkl  label_encoder.pkl  minmax_encoder.pkl  numerical_encoder.pkl  ordinal_encoder.pkl  standard_encoder.pkl
models/: categorical_encoder.pkl  label_encoder.pkl  ordinal_encoder.pkl  postfilter_brute_force_-web.pkl  postfilter_brute_force_-xss.pkl  postfilter_ddos_attack-loic-udp.pkl  postfilter_dos_attacks-slowhttptest.pkl  postfilter_dos_attacks-slowloris.pkl  postfilter_ftp-bruteforce.pkl  postfilter_sql_injection.pkl
models/wgan_cic_brute_force_-web/: critic_model.pth  wgan_model.pth
models/wgan_cic_brute_force_-xss/: critic_model.pth  wgan_model.pth
models/wgan_cic_ddos_attack-loic-udp/: critic_model.pth  wgan_model.pth
models/wgan_cic_dos_attacks-slowhttptest/: critic_model.pth  wgan_model.pth
models/wgan_cic_dos_attacks-slowloris/: critic_model.pth  wgan_model.pth
models/wgan_cic_ftp-bruteforce/: critic_model.pth  wgan_model.pth
models/wgan_cic_sql_injection/: critic_model.pth  wgan_model.pth
models/wgan_probe/: critic_model.pth  wgan_model.pth
models/wgan_r2l/: critic_model.pth  wgan_model.pth
models/wgan_u2r/: critic_model.pth  wgan_model.pth
notebooks/nslkdd/: extract.ipynb
params/training/: bagging.json  catb.json  dnn.json  histgbm.json  xgb.json
src/argparsers/: baseparser.py
src/art_classifier/: __init__.py  art_classifier.py  catb_classifier.py  dnn_classifier.py  sklearn_classifier.py  xgb_classifier.py
src/art_generator/: attack_generator.py  cw.py  deepfool.py  fgsm.py  hsja.py  jsma.py  pgd.py  zoo.py
src/cli/: extract.py  majority_compression.py  merge_final.py  minority_wgan.py  prepare_data_for_train_phase.py
src/compression/: kmeans.py
src/dataservice/: data_service.py  extractor.py
src/datasvc/: data_service.py
src/eval/: cic_histogram_evaluation.py  cic_tsne_evaluation.py  histogram_evaluation.py  nslkdd_histogram_evaluation.py  nslkdd_tsne_evaluation.py  postfilter.py  tsne_evaluation.py
src/models/: wgan.py
src/preprocessing/: cic2018_preprocessor.py  embedding.py  nslkdd_preprocessor.py  preprocessor.py
src/resampling/: README.md
src/training/: bagging.py  catb.py  dnn.py  histgbm.py  model.py  (+1 more)
(+180 files in other folders)
