[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apelid"
version = "0.1.0"
description = "APELID implementation"
authors = [
    {name = "Minh Quang Tran", email = "minhtran6464.lhp@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]


dependencies = [
    "catboost>=1.2.8",
    "colorama>=0.4.6",
    "imblearn>=0.0",
    "pandas>=2.3.2",
    "scikit-learn>=1.6.1",
    "tabpfn>=2.2.1",
    "torch>=2.6.0",
    "tqdm>=4.67.1"
]


[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "black>=21.0.0",
    "isort>=5.0.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src"
